<?xml version="1.0"?>
<package>
  <name>e100_bringup</name>
  <version>0.0.0</version>
  <description> This package includes bringup files of the RIA-E100 </description>
  <maintainer email="viswanath@gaitech.net"> Viswanath </maintainer>
  <maintainer email="shlee@gaitech.kr"> Brighten Lee </maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>